--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "functions": {
     "api/**/*.py": {
-      "runtime": "vercel-python@3.1.9"
+      "maxDuration": 10,
+      "memory": 1024
     }
   },
   "routes": [
