--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
