--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*)",
+      "src": "/((?!api/)(?!.*\\..*).*)",
       "dest": "/index.html"
     }
   ]
