--- a/vercel.json
+++ b/vercel.json
@@ -6,26 +6,12 @@
       "memory": 1024
     }
   },
-  "rewrites": [
-    {
-      "source": "/api/products",
-      "destination": "/api/products.py"
-    },
-    {
-      "source": "/api/products/:path*",
-      "destination": "/api/products.py"
-    },
-    {
-      "source": "/api/acceptance-rules",
-      "destination": "/api/acceptance-rules.py"
-    },
-    {
-      "source": "/api/acceptance-rules/:path*",
-      "destination": "/api/acceptance-rules.py"
-    },
-    {
-      "source": "/((?!api/)(?!.*\\..*).*)",
-      "destination": "/index.html"
-    }
+  "routes": [
+    { "src": "/api/products", "dest": "/api/products.py" },
+    { "src": "/api/products/(.*)", "dest": "/api/products.py" },
+    { "src": "/api/acceptance-rules", "dest": "/api/acceptance-rules.py" },
+    { "src": "/api/acceptance-rules/(.*)", "dest": "/api/acceptance-rules.py" },
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
