--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
     }
   },
   "rewrites": [
+    { "source": "/api/explain-rule", "destination": "/api/explain_rule" },
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
