--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "version": 2,
   "functions": {
+    "api/explain_rule.py": {
+      "maxDuration": 30,
+      "memory": 1024
+    },
     "api/**/*.py": {
       "maxDuration": 10,
       "memory": 1024
