--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,11 @@
     }
   },
   "routes": [
+    {
+      "src": "/api/explain-rule",
+      "dest": "/api/explain-rule.py",
+      "methods": ["GET", "POST", "OPTIONS"]
+    },
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
