--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.py": {
+    "api/explain-rule.py": {
       "maxDuration": 30,
+      "memory": 1024
+    },
+    "api/**/*.py": {
+      "maxDuration": 10,
       "memory": 1024
     }
   },
