--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,7 @@
     }
   },
   "rewrites": [
+    { "source": "/api/dynamieken/:id", "destination": "/api/dynamieken" },
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
