--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -3,7 +3,8 @@ FROM mcr.microsoft.com/playwright/python:v1.50.0-jammy
 WORKDIR /app
 
 COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-worker.txt ./
+RUN pip install --no-cache-dir -r requirements-worker.txt
 
 COPY . .
 
